src/styles.scss
/**
* master sass file, which includes all the partial files
*/
@import "~@angular/material/prebuilt-themes/indigo-pink.css";
/**
* IMPORTING PARTIALS FROM CONFIG DIRECTORY
*/
@import "styles/config/include-media-config";

// == variables partials from base directory before everything to override varaibles with !default flags inside any vendor projects
@import "styles/base/variables";

/**
* IMPORTING PARTIALS FROM VENDORS DIRECTORY
*/

@import "styles/vendors/include-media/include-media"; // SASS plugin for better media query detection
@import "styles/vendors/fontawesome/fontawesome"; // Fontawesome SASS modules
@import "styles/vendors/bootstrap/ctemplar-bootstrap"; // Bootstrap SASS modules
@import "styles/vendors/ceaser/ceaser-easing"; // Ceaser easing SASS module for smooth transition effects
@import "styles/vendors/icomoon/icomoon"; // Icomoon SASS module which includes custom font library

/**
* IMPORTING PARTIALS FROM MIXINS DIRECTORY
*/
@import "styles/mixins/utilities";

/**
* IMPORTING PARTIALS FROM BASE DIRECTORY
*/

// == typograhy and fonts
@import "styles/base/fonts";
@import "styles/base/type";

/**
* IMPORTING PARTIALS FROM LAYOUT DIRECTORY
*/
@import "styles/layouts/global";
@import "styles/layouts/utilities";
@import "styles/layouts/header";
@import "styles/layouts/footer";

/**
* IMPORTING PARTIALS FROM MODULES DIRECTORY
*/
@import "styles/modules/preloader";
@import "styles/modules/menu";
@import "styles/modules/utilities/utilities";
@import "styles/modules/hero";
@import "styles/modules/blocks";
@import "styles/modules/lists";
@import "styles/modules/cards/cards";
@import "styles/modules/comments/comments";

/**
* OVERRIDING BOOTSTRAP MODULES
*/
@import "styles/modules/bootstrap-overrides/overrides";

/**
* IMPORTING PAGES MODULES
*/
@import "styles/pages/user-actions/form-pages";

/**
* IMPORTING MAIL COMPOSER MODULES
*/
@import "styles/modules/mail-composer/mail-composer";

.loading-icon {
  position: absolute;
  top: 28vh;
  margin-left: calc(50% - 20px);
}

// LOADING

@keyframes pulse_animation {
  0% { transform: scale(1); }
  30% { transform: scale(1); }
  40% { transform: scale(1.15); }
  50% { transform: scale(1); }
  60% { transform: scale(1); }
  70% { transform: scale(1.08); }
  80% { transform: scale(1); }
  100% { transform: scale(1); }
}

.loading {
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #3a4e63;
  width: 100%;
  height: 100%;
  text-align: center;

  p {
    margin: 0;
    color: #FFFFFF;
    font-size: 24px;
  }

  .author {
    font-size: 18px;
  }
}

.cdk-overlay-container {
  position: fixed;
  bottom: 0px;
  width: 100%;
}

.cursor-pointer {
  cursor: pointer;
}

// TODO: add src of this font
.ql-font-hiragino-sans {
  font-family: 'Hiragino Sans', sans-serif;
}

.ql-font-lato {
  font-family: 'Lato', sans-serif;
}

.ql-font-roboto {
  font-family: Roboto, sans-serif;
}

// TODO: add src of this font

.ql-font-abril-fatface {
  font-family: 'Abril Fatface', sans-serif;
}

// TODO: add src of this font
.ql-font-andale-mono {
  font-family: 'Andale Mono', sans-serif;
}

.ql-font-arial {
  font-family: Arial, sans-serif;
}

.ql-font-times-new-roman {
  font-family: Times New Roman, serif;
}

.generic-dropdown-list {
  max-height: 300px;
  overflow-y: scroll;
}

//START tag input css

tag-input {

  .ng2-tag-input{
    border-bottom: 0 !important;

    // TODO @kriti please fix this width for multiple devices.
    //width: 650px;
  }

  .ng2-tag-input__text-input{
    height: 20px !important;
  }

  tag {
    height: 20px !important;
    border-radius: 1px !important;
    border: 1px solid lightgrey !important;

    .tag-wrapper {
      margin-top: -10px !important;
    }
  }

  .ng2-dropdown-menu {
    margin-top: -15px;
  }
}

// Gmail styled button
.btn-gmail {
  border-radius: 2px;
  cursor: pointer;
  font-size: 11px;
  text-align: center;
  margin-right: 10px;
  line-height: 2rem;
  min-width: 54px;
  outline: 0;
  padding: 0 8px;
  background-color: #f1f1f1;
  border: 1px solid rgba(0, 0, 0, 0.1);
  color: #444;

  .icon-lg {
    font-size: 1rem;
    vertical-align: middle;
  }
  
  &:hover,
  &:focus{
    border: 1px solid #c6c6c6;
    color: #333;
  }
  
  &:active {
      background: #dedede;
  }
}

.position-left {
  margin-right: 7px;
}

.btn {
  cursor: pointer;
}
//END tag input css

.zEWidget-launcher{
  z-index: 10 !important;
}

.green{
  color: green;
}

.close-mat-keyboard{
  position: absolute;
  top: 5px;
  right: 5px;
  border-radius: 50%;
  border: 1px solid #333;
  background: #333;
  color: white;
  height: 20px;
  width: 20px;
  text-align: center;
  opacity: 1;

  &:hover {
    color: white;
    opacity: 0.8;
  }

  .close-mat-keyboard-icon {
    font-size: 12px;
    vertical-align: middle;
  }
}

